fix top row alignment so x is on the far right and rest is on top left

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -80,3 +80,8 @@ button.cancel {
   flex-direction: row;
   justify-content: space-between;
 }
+.top-left {
+  display:flex;
+  flex-direction: row;
+  gap: 8px;
+}
